Signed-off-by: gbygithub <1260861868@qq.com>

--- a/portal/core/login/login.html
+++ b/portal/core/login/login.html
@@ -1,129 +1,134 @@
-<div id="firstPage" class="block">
-        <nav class="pushpin-demo-nav" data-target="firstPage"> 
-            <div class="nav-wrapper">
-                <div class="container">
-                    <a href="javaScript:;" class="brand-logo">首页</a>
-                </div>
-            </div>
-        </nav>
-        <div class="content"> 
-            <div class="page1_box inside">
-                <div>
-                    <span>首页</span>
-                    <em>HOME</em>
-                </div>
-                <div>
-                    <span>地图</span>
-                    <em>MAP</em>
-                </div>
-                <div>
-                    <span>影集</span>
-                    <em>PHOTOS</em>
-                </div>
-                <div>
-                    <span>展示</span>
-                    <em>SHOW</em>
-                </div>
-                <div>
-                    <span>整站</span>
-                    <em>WEBSITE</em>
-                </div>
-                <div>
-                    <span>联系我</span>
-                    <em>CALLME</em>
-                </div>
-            </div> 
-            <div class="page1_box outside">
-                <strong></strong>
-                <div>
-                    <span>首页</span>
-                    <em>HOME</em>
-                </div>
-                <div>
-                    <span>地图</span>
-                    <em>MAP</em>
-                </div>
-                <div>
-                    <span>影集</span>
-                    <em>PHOTOS</em>
-                </div>
-                <div>
-                    <span>展示</span>
-                    <em>SHOW</em>
-                </div>
-                <div>
-                    <span>整站</span>
-                    <em>WEBSITE</em>
-                </div>
-                <div>
-                    <span>联系我</span>
-                    <em>CALLME</em>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="secondPage" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="secondPage">
-            <div class="nav-wrapper">
-                <div class="container">
-                <a href="#" class="brand-logo">地图</a>
-                </div>
-            </div>
-        </nav>
-        <div class="content">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <div class="map" id="map"></div>
-        </div>
-    </div>
-    <div id="fifthPage" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="fifthPage">
-            <div class="nav-wrapper">
-                <div class="container">
-                <a href="#" class="brand-logo">影集</a>
-                </div>
-            </div>
-        </nav>
-        <div class="content">
-            <h3 style="text-align:center;line-height:500px;">点我......</h3>
-        </div>
-    </div>
-    <div id="thirdPage" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="thirdPage">
-            <div class="nav-wrapper">
-                <div class="container">
-                <a href="#" class="brand-logo">展示</a>
-                </div>
-            </div>
-        </nav>
-      <div class="content">
-          <h3 style="text-align:center;line-height:500px;">未完待续......</h3>
-      </div>
-    </div>
-    <div id="fourthPage" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="fourthPage">
-            <div class="nav-wrapper">
-                <div class="container">
-                <a href="#" class="brand-logo">整站</a>
-                </div>
-            </div>
-        </nav>
-      <div class="content">
-          <h3 style="text-align:center;line-height:500px;">未完待续......</h3>
-      </div>
-    </div>
-    <div id="sixthPage" class="block lighten-1">
-        <nav class="pushpin-demo-nav" data-target="sixthPage">
-            <div class="nav-wrapper">
-                <div class="container">
-                <a href="#" class="brand-logo">联系我</a>
-                </div>
-            </div>
-        </nav>
-      <div class="content">
-          <h3 style="text-align:center;line-height:500px;">未完待续......</h3>
-      </div>
-    </div>
+<!--<script src="../../../libs/codemirror.js" type="text/javascript" charset="utf-8"></script>-->
+<div oc-lazy-load=['core/login/index','portal/core/login/styleIndex.css'] >
+	<div ng-controller="ctr-login">
+		<div id="firstPage" class="block">
+			<nav class="pushpin-demo-nav" data-target="firstPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="javaScript:;" class="brand-logo">首页</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content" style="height: 800px;">
+				<div class="page1_box inside">
+					<div>
+						<span>首页</span>
+						<em>HOME</em>
+					</div>
+					<div>
+						<span>地图</span>
+						<em>MAP</em>
+					</div>
+					<div>
+						<span>影集</span>
+						<em>PHOTOS</em>
+					</div>
+					<div>
+						<span>展示</span>
+						<em>SHOW</em>
+					</div>
+					<div>
+						<span>整站</span>
+						<em>WEBSITE</em>
+					</div>
+					<div>
+						<span>联系我</span>
+						<em>CALLME</em>
+					</div>
+				</div>
+				<div class="page1_box outside">
+					<strong></strong>
+					<div>
+						<span>首页</span>
+						<em>HOME</em>
+					</div>
+					<div>
+						<span>地图</span>
+						<em>MAP</em>
+					</div>
+					<div>
+						<span>影集</span>
+						<em>PHOTOS</em>
+					</div>
+					<div>
+						<span>展示</span>
+						<em>SHOW</em>
+					</div>
+					<div>
+						<span>整站</span>
+						<em>WEBSITE</em>
+					</div>
+					<div>
+						<span>联系我</span>
+						<em>CALLME</em>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="secondPage" class="block lighten-1">
+			<nav class="pushpin-demo-nav" data-target="secondPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">地图</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content" style="height: 900px;">
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<!--<div class="map" id="map"></div>-->
+			</div>
+		</div>
+		<div id="thirdPage" class="block lighten-1">
+			<nav class="pushpin-demo-nav" data-target="thirdPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">展示</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content">
+				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
+			</div>
+		</div>
+		<div id="fifthPage" class="block lighten-1">
+			<nav class="pushpin-demo-nav" data-target="fifthPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">影集</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content">
+				<h3 style="text-align:center;line-height:500px;">点我......</h3>
+			</div>
+		</div>
+		<div id="fourthPage" class="block lighten-1">
+			<nav class="pushpin-demo-nav" data-target="fourthPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">整站</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content">
+				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
+			</div>
+		</div>
+		<div id="sixthPage" class="block lighten-1">
+			<nav class="pushpin-demo-nav" data-target="sixthPage">
+				<div class="nav-wrapper">
+					<div class="container">
+						<a href="#" class="brand-logo">联系我</a>
+					</div>
+				</div>
+			</nav>
+			<div class="content">
+				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
+			</div>
+		</div>
+	</div>
+</div>
