--- a/portal/core/login/login.html
+++ b/portal/core/login/login.html
@@ -1,19 +1,19 @@
 <!--<script src="../../../libs/codemirror.js" type="text/javascript" charset="utf-8"></script>-->
-<div oc-lazy-load=['core/login/index','portal/core/login/styleIndex.css'] >
-	<div ng-controller="ctr-login">
-		<div id="firstPage" class="block">
-			<nav class="pushpin-demo-nav" data-target="firstPage">
+<div oc-lazy-load=['core/login/index','portal/core/login/styleIndex.css'] style="height:100%">
+	<div ng-controller="ctr-login" style="height:100%">
+		<!--<div id="firstPage" class="block">-->
+			<!--<nav class="pushpin-demo-nav" data-target="firstPage">
 				<div class="nav-wrapper">
 					<div class="container">
 						<a href="javaScript:;" class="brand-logo">首页</a>
 					</div>
 				</div>
-			</nav>
-			<div class="content" style="height: 800px;">
+			</nav>-->
+			<div class="content">
 				<div class="page1_box inside">
 					<div>
-						<span>首页</span>
-						<em>HOME</em>
+						<span>游戏</span>
+						<em>GAME</em>
 					</div>
 					<div>
 						<span>地图</span>
@@ -39,7 +39,7 @@
 				<div class="page1_box outside">
 					<strong></strong>
 					<div>
-						<span>首页</span>
+						<span>游戏</span>
 						<em>HOME</em>
 					</div>
 					<div>
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="secondPage" class="block lighten-1">
+		<!--<div id="secondPage" class="block lighten-1">
 			<nav class="pushpin-demo-nav" data-target="secondPage">
 				<div class="nav-wrapper">
 					<div class="container">
@@ -81,8 +81,8 @@
 				</ul>
 				<!--<div class="map" id="map"></div>-->
 			</div>
-		</div>
-		<div id="thirdPage" class="block lighten-1">
+		<!--</div>-->
+		<!--<div id="thirdPage" class="block lighten-1">
 			<nav class="pushpin-demo-nav" data-target="thirdPage">
 				<div class="nav-wrapper">
 					<div class="container">
@@ -93,8 +93,8 @@
 			<div class="content">
 				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
 			</div>
-		</div>
-		<div id="fifthPage" class="block lighten-1">
+		</div>-->
+		<!--<div id="fifthPage" class="block lighten-1">
 			<nav class="pushpin-demo-nav" data-target="fifthPage">
 				<div class="nav-wrapper">
 					<div class="container">
@@ -105,8 +105,8 @@
 			<div class="content">
 				<h3 style="text-align:center;line-height:500px;">点我......</h3>
 			</div>
-		</div>
-		<div id="fourthPage" class="block lighten-1">
+		</div>-->
+		<!--<div id="fourthPage" class="block lighten-1">
 			<nav class="pushpin-demo-nav" data-target="fourthPage">
 				<div class="nav-wrapper">
 					<div class="container">
@@ -117,8 +117,8 @@
 			<div class="content">
 				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
 			</div>
-		</div>
-		<div id="sixthPage" class="block lighten-1">
+		</div>-->
+		<!--<div id="sixthPage" class="block lighten-1">
 			<nav class="pushpin-demo-nav" data-target="sixthPage">
 				<div class="nav-wrapper">
 					<div class="container">
@@ -129,6 +129,6 @@
 			<div class="content">
 				<h3 style="text-align:center;line-height:500px;">未完待续......</h3>
 			</div>
-		</div>
-	</div>
-</div>
+		</div>-->
+	<!--</div>-->
+<!--</div>-->
